# CC4102_aux_01

./: .gitignore  CC4102_Adversario.ipynb  CMakeLists.txt  busqueda_segmentada.cpp  main.cpp
include/: common.h
